CMAKE_MINIMUM_REQUIRED(VERSION 3.13.4)

PROJECT(landstalker_tools VERSION 1.0.0)

CONFIGURE_FILE(landstalker_tools.h.in landstalker_tools.h)

ADD_SUBDIRECTORY(src)

INCLUDE(InstallRequiredSystemLibraries)
SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE")
SET(CPACK_PACKAGE_VERSION_MAJOR "${landstalker_tools_VERSION_MAJOR}")
SET(CPACK_PACKAGE_VERSION_MINOR "${landstalker_tools_VERSION_MINOR}")
SET(CPACK_PACKAGE_VERSION_PATCH "${landstalker_tools_VERSION_PATCH}")
INCLUDE(CPack)
