CMAKE_MINIMUM_REQUIRED(VERSION 3.28)

SET(EXECUTABLE_NAME lsextract)

ADD_EXECUTABLE(${EXECUTABLE_NAME} main.cpp)

SET_TARGET_PROPERTIES(${EXECUTABLE_NAME} PROPERTIES
    CXX_STANDARD 20
    CXX_EXTENSIONS OFF
)

IF(MSVC)
    TARGET_COMPILE_DEFINITIONS(${EXECUTABLE_NAME} PRIVATE _SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING)
ENDIF()

TARGET_INCLUDE_DIRECTORIES(${EXECUTABLE_NAME}
    PUBLIC ${PROJECT_BINARY_DIR}
)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} landstalker yaml-cpp::yaml-cpp)

INSTALL(TARGETS ${EXECUTABLE_NAME} DESTINATION bin)
INSTALL(FILES $<TARGET_RUNTIME_DLLS:${EXECUTABLE_NAME}> TYPE BIN)
