CMAKE_MINIMUM_REQUIRED(VERSION 3.28)

SET(EXECUTABLE_NAME map3d)

ADD_EXECUTABLE(${EXECUTABLE_NAME} main.cpp)

SET_TARGET_PROPERTIES(${EXECUTABLE_NAME} PROPERTIES
    CXX_STANDARD 17
    CXX_EXTENSIONS OFF
)

TARGET_INCLUDE_DIRECTORIES(${EXECUTABLE_NAME}
    PUBLIC ${PROJECT_BINARY_DIR}
    PUBLIC ../common/include
    PUBLIC ../third_party/tclap-1.2.2/include
    PUBLIC ../third_party/rapidcsv-7.00/src
)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} landstalker)

INSTALL(TARGETS ${EXECUTABLE_NAME} DESTINATION bin)
